@@ -3,11 +3,8 @@ package org.sensepitch.edge;
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.Unpooled;
 import io.netty.channel.Channel;
-import io.netty.channel.ChannelDuplexHandler;
 import io.netty.channel.ChannelHandler;
 import io.netty.channel.ChannelHandlerContext;
-import io.netty.channel.ChannelInboundHandler;
-import io.netty.channel.ChannelInboundHandlerAdapter;
 import io.netty.handler.codec.http.DefaultFullHttpResponse;
 import io.netty.handler.codec.http.FullHttpResponse;
 import io.netty.handler.codec.http.HttpHeaderNames;
@@ -15,7 +12,6 @@ import io.netty.handler.codec.http.HttpMethod;
 import io.netty.handler.codec.http.HttpRequest;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import io.netty.handler.codec.http.HttpVersion;
-import io.netty.handler.codec.http.LastHttpContent;
 import io.netty.handler.codec.http.QueryStringDecoder;
 import io.netty.handler.codec.http.cookie.Cookie;
 import io.netty.handler.codec.http.cookie.DefaultCookie;
@@ -23,8 +19,6 @@ import io.netty.handler.codec.http.cookie.ServerCookieDecoder;
 import io.netty.handler.codec.http.cookie.ServerCookieEncoder;
 import io.netty.util.CharsetUtil;
 import io.netty.util.ReferenceCountUtil;
-import io.netty.util.ReferenceCounted;
-
 import java.net.Inet4Address;
 import java.net.SocketException;
 import java.net.UnknownHostException;
@@ -39,17 +33,24 @@ import java.util.concurrent.atomic.LongAdder;
  * @author Jens Wilke
  */
 @ChannelHandler.Sharable
-public class AdmissionHandler extends ChannelInboundHandlerAdapter implements HasMetrics {
+public class DeflectorHandler extends SkippingChannelInboundHandlerAdapter implements HasMetrics {
 
-  private static final ProxyLogger LOG = ProxyLogger.get(AdmissionHandler.class);
+  private static final ProxyLogger LOG = ProxyLogger.get(DeflectorHandler.class);
 
   public static final String VERIFICATION_URL = "/.sensepitch.challenge.answer";
   public static final String htmlTemplate = ResourceLoader.loadTextFile("challenge.html");
   public static String cookieName = "sensepitch-pass";
+
   /** Request header containing the validated admission token */
   public static String ADMISSION_TOKEN_HEADER = "X-Sensepitch-Admission-Token";
+  public static String TRAFFIC_FLAVOR_HEADER = "X-Sensepitch-Traffic-Flavor";
 
-  ChallengeGenerationAndVerification challengeVerification = new ChallengeGenerationAndVerification();
+  public static String FLAVOR_USER = "user";
+  public static String FLAVOR_CRAWLER = "crawler";
+  public static String FLAVOR_DEFLECT = "deflect";
+
+  ChallengeGenerationAndVerification challengeVerification =
+      new ChallengeGenerationAndVerification();
   private final NoBypassCheck noBypassCheck;
   private final BypassCheck bypassCheck;
   private final AdmissionTokenGenerator tokenGenerator;
@@ -61,10 +62,7 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
   LongAdder passedRequestCounter = new LongAdder();
   LongAdder bypassRequestCounter = new LongAdder();
 
-  AdmissionHandler(AdmissionConfig cfg) {
-    if (cfg == null) {
-      cfg = AdmissionConfig.builder().build();
-    }
+  DeflectorHandler(DeflectorConfig cfg) {
     if (cfg.noBypass() != null) {
       noBypassCheck = new DefaultNoBypassCheck(cfg.noBypass());
     } else {
@@ -92,10 +90,13 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
       serverIpv4Address = deriveServerIpv4Address();
     }
     AdmissionTokenGenerator firstGenerator = null;
-    for (AdmissionTokenGeneratorConfig tc : cfg.tokenGenerator()) {
+    for (AdmissionTokenGeneratorConfig tc : cfg.tokenGenerators()) {
       char prefix = tc.prefix().charAt(0);
-       DefaultAdmissionTokenGenerator generator = new DefaultAdmissionTokenGenerator(serverIpv4Address, prefix, tc.secret());
-       if (firstGenerator == null) { firstGenerator = generator; }
+      DefaultAdmissionTokenGenerator generator =
+          new DefaultAdmissionTokenGenerator(serverIpv4Address, prefix, tc.secret());
+      if (firstGenerator == null) {
+        firstGenerator = generator;
+      }
       tokenGenerators.put(prefix, generator);
     }
     tokenGenerator = firstGenerator;
@@ -115,7 +116,7 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
     if (!error) {
       LOG.error("No public IPv4 address found");
     }
-    return new byte[]{1, 1, 1, 1};
+    return new byte[] {1, 1, 1, 1};
   }
 
   BypassCheck chainBypassCheck(BypassCheck first, BypassCheck second) {
@@ -131,47 +132,31 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
   }
 
   @Override
-  public void channelRead(ChannelHandlerContext ctx, Object msg) {
-    LOG.traceChannelRead(ctx, msg);
-    if (msg instanceof HttpRequest) {
-      HttpRequest request = (HttpRequest) msg;
+  public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
+    if (msg instanceof HttpRequest request) {
       if (checkAdmissionCookie(request)) {
         passedRequestCounter.increment();
+        request.headers().set(DeflectorHandler.TRAFFIC_FLAVOR_HEADER, DeflectorHandler.FLAVOR_USER);
         ctx.fireChannelRead(msg);
-      } else if (!noBypassCheck.skipBypass(ctx, request) && bypassCheck.allowBypass(ctx.channel(), request)) {
+      } else if (!noBypassCheck.skipBypass(ctx, request)
+          && bypassCheck.allowBypass(ctx.channel(), request)) {
         bypassRequestCounter.increment();
         ctx.fireChannelRead(msg);
       } else if (request.method() == HttpMethod.GET && request.uri().startsWith(VERIFICATION_URL)) {
+        request.headers().set(DeflectorHandler.TRAFFIC_FLAVOR_HEADER, DeflectorHandler.FLAVOR_USER);
         handleChallengeAnswer(ctx, request);
         ReferenceCountUtil.release(request);
-        discardFollowingContent(ctx);
+        skipFollowingContent(ctx);
       } else {
         // TODO: behaviour of non GET requests?
-        outputChallengeHtml(ctx.channel());
+        request.headers().set(DeflectorHandler.TRAFFIC_FLAVOR_HEADER, DeflectorHandler.FLAVOR_DEFLECT);
+        outputChallengeHtml(ctx);
         ReferenceCountUtil.release(request);
-        discardFollowingContent(ctx);
+        skipFollowingContent(ctx);
       }
     } else {
-      ctx.fireChannelRead(msg);
+      super.channelRead(ctx, msg);
     }
-  }
-
-  /**
-   * Discard content messages that may follow the request until we receive
-   * a LastHttpCount message. Revert back, because we may receive new requests
-   * on the same channel (http keep alive).
-   */
-  void discardFollowingContent(ChannelHandlerContext ctx) {
-    ChannelInboundHandler inboundHandler = new ChannelInboundHandlerAdapter() {
-      @Override
-      public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
-        if (msg instanceof LastHttpContent) {
-          ctx.pipeline().replace(this, "admission", AdmissionHandler.this);
-        }
-        ReferenceCountUtil.release(msg);
-      }
-    };
-    ctx.pipeline().replace(this, "discard", inboundHandler);
   }
 
   public Metrics getMetrics() {
@@ -179,37 +164,50 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
   }
 
   public class Metrics {
-    public long getChallengeSentCount() { return challengeSentCounter.longValue(); }
-    public long getChallengeAnsweredCount() { return challengeAnsweredCounter.longValue(); }
-    public long getChallengeAnswerRejectedCount() { return challengeAnswerRejectedCounter.longValue(); }
-    public long getPassRequestCount() { return passedRequestCounter.longValue(); }
-    public long getBypassRequestCount() { return bypassRequestCounter.longValue(); }
+    public long getChallengeSentCount() {
+      return challengeSentCounter.longValue();
+    }
+
+    public long getChallengeAnsweredCount() {
+      return challengeAnsweredCounter.longValue();
+    }
+
+    public long getChallengeAnswerRejectedCount() {
+      return challengeAnswerRejectedCounter.longValue();
+    }
+
+    public long getPassRequestCount() {
+      return passedRequestCounter.longValue();
+    }
+
+    public long getBypassRequestCount() {
+      return bypassRequestCounter.longValue();
+    }
   }
 
-  private void outputChallengeHtml(Channel channel) {
+  private void outputChallengeHtml(ChannelHandlerContext ctx) {
     String msg = htmlTemplate.replace("{{CHALLENGE}}", challengeVerification.generateChallenge());
     msg = msg.replace("{{VERIFY_URL}}", VERIFICATION_URL);
     msg = msg.replace("{{PREFIX}}", challengeVerification.getTargetPrefix());
     ByteBuf buf = Unpooled.copiedBuffer(msg, CharsetUtil.UTF_8);
     FullHttpResponse response =
-      new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.FORBIDDEN, buf);
+        new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.FORBIDDEN, buf);
     response.headers().set(HttpHeaderNames.CONTENT_TYPE, "text/html; charset=UTF-8");
     response.headers().setInt(HttpHeaderNames.CONTENT_LENGTH, buf.readableBytes());
-    channel.writeAndFlush(response);
+    ctx.writeAndFlush(response);
     challengeSentCounter.increment();
   }
 
   private void handleChallengeAnswer(ChannelHandlerContext ctx, HttpRequest req) {
     QueryStringDecoder decoder = new QueryStringDecoder(req.uri());
     Map<String, List<String>> params = decoder.parameters();
-    String challenge = params.get("challenge").get(0);
-    String nonce = params.get("nonce").get(0);
+    String challenge = params.get("challenge").getFirst();
+    String nonce = params.get("nonce").getFirst();
     long t = challengeVerification.verifyChallengeParameters(challenge, nonce);
     FullHttpResponse response;
     if (t > 0) {
       challengeAnsweredCounter.increment();
-      response =
-        new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.OK);
+      response = new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.OK);
       String cookieValue = tokenGenerator.newAdmission();
       Cookie cookie = new DefaultCookie(cookieName, cookieValue);
       cookie.setHttpOnly(true);
@@ -220,8 +218,7 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
       response.headers().set(HttpHeaderNames.SET_COOKIE, encodedCookie);
     } else {
       challengeAnswerRejectedCounter.increment();
-      response =
-        new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.BAD_REQUEST);
+      response = new DefaultFullHttpResponse(HttpVersion.HTTP_1_1, HttpResponseStatus.BAD_REQUEST);
     }
     ctx.writeAndFlush(response);
   }
@@ -250,5 +247,4 @@ public class AdmissionHandler extends ChannelInboundHandlerAdapter implements Ha
     }
     return false;
   }
-
 }
